<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/login_backgroud"
        android:layout_width="0dp"
        android:layout_height="1000dp"
        android:layout_marginBottom="80dp"
        android:scaleType="centerCrop"

        android:transitionName="appBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/scrolling_background_large" />

    <ImageView
        android:id="@+id/login_banner"
        android:layout_width="0dp"
        android:layout_height="277dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:adjustViewBounds="true"

        android:scaleType="centerInside"

        android:src="@drawable/rocket_fish"
        android:transitionName="appBanner"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.realtwin.goforplastic.ui.view.ThumbnailImageButton
        android:id="@+id/btn_login_fb"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="70dp"
        android:visibility="visible"

        app:backgroundSrc="@drawable/blue"
        app:cornerRadius="15dp"
        app:label="@string/login_with_fb"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="@id/login_banner"
        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintStart_toStartOf="@id/login_banner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.558"
        app:thumbnailSrc="@drawable/fb_logo_white" />

    <com.realtwin.goforplastic.ui.view.ThumbnailImageButton
            android:id="@+id/btn_create_account"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginTop="5dp"
            android:visibility="visible"

            app:cornerRadius="15dp"
            app:label="@string/create_account"
            app:backgroundSrc="@drawable/blue"
            app:thumbnailSrc="@drawable/register"

            app:layout_constraintEnd_toEndOf="@id/btn_login_fb"
            app:layout_constraintStart_toStartOf="@id/btn_login_fb"

            app:layout_constraintTop_toBottomOf="@id/btn_login_fb"

           />

    <com.realtwin.goforplastic.ui.view.ThumbnailImageButton
            android:id="@+id/btn_sign_in"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginTop="5dp"
            android:visibility="visible"

            app:cornerRadius="15dp"
            app:label="@string/login_existing_account"
            app:backgroundSrc="@drawable/blue"
            app:thumbnailSrc="@drawable/login"

            app:layout_constraintEnd_toEndOf="@id/btn_login_fb"
            app:layout_constraintStart_toStartOf="@id/btn_login_fb"

            app:layout_constraintTop_toBottomOf="@id/btn_create_account"

           />


</androidx.constraintlayout.widget.ConstraintLayout>