<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
            android:id="@+id/signin_background"
            android:layout_width="0dp"
            android:layout_height="1000dp"


            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            android:background="@drawable/scrolling_background_large"
            android:layout_marginBottom="100dp"
            android:scaleType="centerCrop"
    />

    <ImageView
        android:id="@+id/login_banner"
        android:layout_width="0dp"
        android:layout_height="277dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:adjustViewBounds="true"

        android:scaleType="centerInside"

        android:src="@drawable/rocket_fish"
        android:transitionName="appBanner"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0." />

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="56dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"

            android:layout_marginTop="300dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

    >



        <!--   Email Label  -->
        <TextView
                android:id="@+id/sign_in_email_view"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/email"
                android:gravity="center"
                android:textSize="15sp"
                android:fontFamily="sans-serif"
                android:textColor="@color/sign_in_color"
        />
        <android.widget.LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/ex_email"
                    android:textColorHint="@color/sign_in_color"
                    android:textColor="@color/sign_in_color"
                    app:backgroundTint="@color/edit_text_color_hint"
            />
        </android.widget.LinearLayout>

        <!--   Password Label  -->
        <TextView
                android:id="@+id/sign_in_password_view"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/password"
                android:gravity="center"
                android:textSize="15sp"
                android:fontFamily="sans-serif"
                android:textColor="@color/sign_in_color"
        />
        <android.widget.LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="Password"
                    android:textColorHint="@color/sign_in_color"
                    android:textColor="@color/sign_in_color"
                    app:backgroundTint="@color/edit_text_color_hint"

            />
        </android.widget.LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"

                android:layout_height="60dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="Login"
                android:gravity="center"
                android:textSize="15sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:textColor="@color/white"
                android:background="@drawable/blue"

        />


    </LinearLayout>




    <ImageView
            android:id="@+id/blur"
            android:layout_width="0dp"
            android:layout_height="0dp"


            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            android:background="@android:color/black"
            android:scaleType="centerCrop"
            android:alpha="0"
    />


    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id = "@+id/authentication_view"
                 android:layout_width="match_parent"
                 android:layout_height="220dp"
                 android:orientation="horizontal"
                 android:layout_marginTop="-7dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintVertical_bias="0.3"
                 android:alpha="0"
    >


        <ProgressBar
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:scaleX="0.9"
            android:scaleY="0.9"
            android:indeterminate="true"
            android:indeterminateTint="@color/green"
            android:indeterminateDrawable="@drawable/my_progress_indeterminate" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authentication"
                android:textSize="18sp"
                android:textColor="#EBECEC"
                android:fontFamily="sans-serif"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginRight="8dp"

        />





    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>